samples/_failures_safe/1761150687_9d4c51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb7e5f1f.c: In function ‘main’:
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_fb7e5f1f.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: expected declaration or statement at end of input
  152 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb7e5f1f.c:152:21: error: expected declaration or statement at end of input
